{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 33,
  "lineage": "217ac46e-2ab7-36a9-367b-2c1ef01e6ef0",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/virtualNetworks/vnet-uswest/subnets/Prod-Snet",
            "name": "Prod-Snet",
            "network_security_group_id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkSecurityGroups/Sec-Gp-WestUS",
            "resource_group_name": "Infra-WestUS-RG",
            "virtual_network_name": "vnet-uswest"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/virtualNetworks/vnet-uswest/subnets/Dev-Snet",
            "name": "Dev-Snet",
            "network_security_group_id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkSecurityGroups/Sec-Gp-WestUS",
            "resource_group_name": "Infra-WestUS-RG",
            "virtual_network_name": "vnet-uswest"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkInterfaces/nic1",
            "internal_domain_name_suffix": "3cunypte1yauvcvr4lwa1gsr2h.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/virtualNetworks/vnet-uswest/subnets/Prod-Snet"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-05-FF-57",
            "name": "nic1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Infra-WestUS-RG",
            "virtual_machine_id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Compute/virtualMachines/ABKVM01"
          },
          "dependencies": [
            "azurerm_network_security_group.Sec-gp1",
            "azurerm_resource_group.Infra-RG",
            "azurerm_virtual_network.vnet1",
            "data.azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Sec-gp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkSecurityGroups/Sec-Gp-WestUS",
            "location": "westus",
            "name": "Sec-Gp-WestUS",
            "resource_group_name": "Infra-WestUS-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "rdp-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Infra-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkSecurityGroups/Sec-Gp-WestUS/securityRules/rdp-rule",
            "name": "rdp-rule",
            "network_security_group_name": "Sec-Gp-WestUS",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Infra-WestUS-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.Sec-gp1",
            "azurerm_resource_group.Infra-RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3edca8e8-de64-4a01-8ab1-f2ec0d9a51e7",
            "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/virtualNetworks/vnet-uswest",
            "location": "westus",
            "name": "vnet-uswest",
            "resource_group_name": "Infra-WestUS-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/virtualNetworks/vnet-uswest/subnets/Prod-Snet",
                "name": "Prod-Snet",
                "security_group": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkSecurityGroups/Sec-Gp-WestUS"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/virtualNetworks/vnet-uswest/subnets/Dev-Snet",
                "name": "Dev-Snet",
                "security_group": "/subscriptions/1a969a93-6700-4065-8df6-c63ab4cd3352/resourceGroups/Infra-WestUS-RG/providers/Microsoft.Network/networkSecurityGroups/Sec-Gp-WestUS"
              }
            ]
          },
          "dependencies": [
            "azurerm_network_security_group.Sec-gp1",
            "azurerm_resource_group.Infra-RG"
          ]
        }
      ]
    }
  ]
}